app/assets/stylesheets/_react-select.scss
/**
 * React Select
 * ============
 * Created by Jed Watson and Joss Mackison for KeystoneJS, http://www.keystonejs.com/
 * https://twitter.com/jedwatson https://twitter.com/jossmackison https://twitter.com/keystonejs
 * MIT License: https://github.com/keystonejs/react-select
*/

.Select {
  position: relative;
  display: inline-block;
  white-space: nowrap;
}

.Select-control {
  background-color: #ffffff;
  color: #333333;
  position: relative;
  min-width: 60px;
  white-space: nowrap;
  padding: 8px 120px 8px 10px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: default;
  outline: none;
}

.is-searchable.is-open > .Select-control {
  cursor: text;
}

.is-open > .Select-control {
  border-bottom-right-radius: 0;
  border-bottom-left-radius: 0;
  background: #ffffff;
  border-color: #b3b3b3 #cccccc #d9d9d9;
  > .Select-arrow {
    border-color: transparent transparent #999999;
    border-width: 0 5px 5px;
  }
}

.is-searchable.is-focused:not(.is-open) > .Select-control {
  cursor: text;
}


.Select-placeholder {
  color: #aaaaaa;
  padding: 8px 52px 8px 10px;
  position: absolute;
  top: 0;
  left: 0;
  right: -15px;
  max-width: 100%;
  min-width: 150px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.has-value > .Select-control > .Select-placeholder {
  color: #333333;
}

.Select-value {
  color: #aaaaaa;
  padding: 8px 52px 8px 10px;
  position: absolute;
  top: 0;
  left: 0;
  right: -15px;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.has-value > .Select-control > .Select-value {
  color: #333333;
}

.Select-input > input {
  cursor: default;
  background: none transparent;
  box-shadow: none;
  height: auto;
  border: 0 none;
  font-family: inherit;
  font-size: inherit;
  margin: 0;
  padding: 0;
  outline: none;
  display: inline-block;
  -webkit-appearance: none;
}

.is-focused .Select-input > input {
  cursor: text;
}

.Select-control:not(.is-searchable) > .Select-input {
  outline: none;
}

.Select-loading {
  -webkit-animation: Select-animation-spin 400ms infinite linear;
  -o-animation: Select-animation-spin 400ms infinite linear;
  animation: Select-animation-spin 400ms infinite linear;
  width: 16px;
  height: 16px;
  box-sizing: border-box;
  border-radius: 50%;
  border: 2px solid #cccccc;
  border-right-color: #333333;
  display: inline-block;
  position: relative;
  margin-top: -8px;
  position: absolute;
  right: 30px;
  top: 50%;
}

.has-value > .Select-control > .Select-loading {
  right: 46px;
}

.Select-clear {
  color: #999999;
  cursor: pointer;
  // display: inline-block;
  display: none;
  font-size: 16px;
  padding: 6px 10px;
  position: absolute;
  right: 17px;
  top: 0;
  &:hover {
    color: #c0392b;
  }
  > span {
    font-size: 1.1em;
  }
}

.Select-arrow-zone {
  content: " ";
  display: block;
  position: absolute;
  right: 0;
  top: 0;
  bottom: 0;
  width: 30px;
  cursor: pointer;
}

.Select-arrow {
  border-color: #999999 transparent transparent;
  border-style: solid;
  border-width: 5px 5px 0;
  content: " ";
  display: block;
  height: 0;
  margin-top: -ceil(2.5px);
  position: absolute;
  right: 10px;
  top: 14px;
  width: 0;
  cursor: pointer;
}

.Select-menu-outer {
  border-bottom-right-radius: 4px;
  border-bottom-left-radius: 4px;
  background-color: #ffffff;
  border: 1px solid #cccccc;
  border-top-color: #e6e6e6;
  box-shadow: 0 1px 0 rgba(0, 0, 0, 0.06);
  box-sizing: border-box;
  margin-top: -1px;
  max-height: 200px;
  position: absolute;
  top: 100%;
  min-width: 100%;
  z-index: 1000;
  -webkit-overflow-scrolling: touch;
  white-space: nowrap;
}

.Select-menu {
  max-height: 198px;
  overflow-y: auto;
}

.Select-option {
  box-sizing: border-box;
  color: #666666;
  cursor: pointer;
  display: block;
  padding: 8px 10px;
  white-space: nowrap;
  &:last-child {
    border-bottom-right-radius: 4px;
    border-bottom-left-radius: 4px;
  }
  &.is-focused {
    background-color: #f2f9fc;
    color: #333333;
  }
  &.is-disabled {
    color: #cccccc;
    cursor: not-allowed;
  }
}

.Select-noresults, .Select-search-prompt, .Select-searching {
  box-sizing: border-box;
  color: #999999;
  cursor: default;
  display: block;
  padding: 8px 10px;
}

.Select.is-multi {
  .Select-control {
    padding: 2px 52px 2px 3px;
  }
  .Select-input {
    vertical-align: middle;
    border: 1px solid transparent;
    margin: 2px;
    padding: 3px 0;
  }
}

.Select-item {
  background-color: #f2f9fc;
  border-radius: 2px;
  border: 1px solid #c9e6f2;
  color: #0088cc;
  display: inline-block;
  font-size: 1em;
  margin: 2px;
}

.Select-item-icon {
  display: inline-block;
  vertical-align: middle;
}

.Select-item-label {
  display: inline-block;
  vertical-align: middle;
  cursor: default;
  border-bottom-right-radius: 2px;
  border-top-right-radius: 2px;
  padding: 3px 5px;
  .Select-item-label__a {
    color: #0088cc;
    cursor: pointer;
  }
}

.Select-item-icon {
  cursor: pointer;
  border-bottom-left-radius: 2px;
  border-top-left-radius: 2px;
  border-right: 1px solid #c9e6f2;
  padding: 2px 5px 4px;
  &:hover, &:focus {
    background-color: #ddeff7;
    color: #0077b3;
  }
  &:active {
    background-color: #c9e6f2;
  }
}

.Select.is-multi.is-disabled {
  .Select-item {
    background-color: #f2f2f2;
    border: 1px solid #d9d9d9;
    color: #888888;
  }
  .Select-item-icon {
    cursor: not-allowed;
    border-right: 1px solid #d9d9d9;
    &:hover, &:focus, &:active {
      background-color: #f2f2f2;
    }
  }
}

@keyframes Select-animation-spin {
  to {
    transform: rotate(1turn);
  }
}


@-webkit-keyframes Select-animation-spin {
  to {
    -webkit-transform: rotate(1turn);
  }
}

